@@ -1,3 +1,4 @@
+* Added PartnerUser proxy model for V2.
 * Added CustomerActivity proxy model for V2.
 
 === 0.5.12 2014-07-24
